chore: restructure project folders

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
 POSTGRES_DB=your-database
 POSTGRES_PORT=5432
+CASBIN_POLICY_FILE==casbin_policy.csv
