chore: update dblient to mongodb

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
-POSTGRES_HOST=127.0.0.1
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=password
-POSTGRES_DB=your-database
-POSTGRES_PORT=5432
+MONGO_HOST=127.0.0.1
+MONGO_USER=user
+MONGO_PASSWORD=password
+MONGO_DB=your-database
+MONGO_PORT=27017
 CASBIN_POLICY_FILE==casbin_policy.csv
+CASBIN_CONFIG_FILE=casbin.conf
