--- a/.env.sample
+++ b/.env.sample
@@ -3,5 +3,7 @@ MONGO_USER=user
 MONGO_PASSWORD=password
 MONGO_DB=your-database
 MONGO_PORT=27017
-CASBIN_POLICY_FILE==casbin_policy.csv
-CASBIN_CONFIG_FILE=casbin.conf
+KC_BASE_URL="http://localhost:8080"
+KC_CLIENT_ID="blood-donate-locator-api"
+KC_CLIENT_SECRET="xxx"
+KC_REALM="master"
